# chatterbox-finetuning

./: .beamignore  .gitignore  debug_gradient_flow.py  debug_hindi_embeddings.py  debug_hindi_training.py  debug_training_issues.py  download_hf_repo.py  example_tts.py  finetune_t3_beam.py  gradio_interface.py  model_path.json  monitor_gradient_flow.py  pyproject.toml  quick_debug.py  run_cartesia_finetune_enhanced.sh  test_tokenizer.py  train_hindi_aggressive.sh  train_hindi_optimized.sh  transliteration_usage_example.md
chatterbox/: tts.py
chatterbox/models/t3/modules/: t3_config.py
src/: finetune_t3.py  finetune_t3__t13n.py  finetune_t3_cartesia.py
src/chatterbox/models/t3/modules/: t3_config.py
tokenizer_scripts/: create_dataset_hi_text.py  create_dataset_hi_text_csv.py  extend_tokenizer_weights.py  hi_tokenizer_500.json  hi_tokenizer_500_.json  make_new_tokenizer.py  remove_roman.py  tokenizer_hi_merged.json
transliterate/: README.md  check_dataset.py  config.py  config_info.py  help.py  memory_monitor.py  requirements.txt  transliterate_hi_en.py
